--- a/pom.xml
+++ b/pom.xml
@@ -2,21 +2,33 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>ryhma</groupId>
-	<artifactId>Lipunmyynti</artifactId>
+	<groupId>amiedu</groupId>
+	<artifactId>testaus2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/junit/junit -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.13-beta-1</version>
-			<scope>test</scope>
+			<version>4.12</version>
+		</dependency>
+		<!-- dependency> <groupId>org.junit.jupiter</groupId> <artifactId>junit-jupiter-engine</artifactId> 
+			<version>5.1.0</version> <scope>test</scope> </dependency -->
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>3.1.0</version>
+		    <scope>test</scope>
 		</dependency>
 
 
-
 	</dependencies>
+
+
 	<build>
 
 		<sourceDirectory>src/main/java</sourceDirectory>
@@ -38,13 +50,27 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
-					<version>3.0.0-M3</version>
-
+					<version>2.22.0</version>
 				</plugin>
-				<!-- <plugin> <groupId>org.jacoco</groupId> <artifactId>jacoco-maven-plugin</artifactId> 
-					<version>0.8.2</version> <executions> <execution> <goals> <goal>prepare-agent</goal> 
-					</goals> </execution> <execution> <id>report</id> <phase>test</phase> <goals> 
-					<goal>report</goal> </goals> </execution> </executions> </plugin> -->
+				<plugin>
+					<groupId>org.jacoco</groupId>
+					<artifactId>jacoco-maven-plugin</artifactId>
+					<version>0.8.2</version>
+					<executions>
+						<execution>
+							<goals>
+								<goal>prepare-agent</goal>
+							</goals>
+						</execution>
+						<execution>
+							<id>report</id>
+							<phase>test</phase>
+							<goals>
+								<goal>report</goal>
+							</goals>
+						</execution>
+					</executions>
+				</plugin>
 			</plugins>
 		</pluginManagement>
 		<plugins>
@@ -57,5 +83,5 @@
 			</plugin>
 		</plugins>
 	</build>
-</project>
 
+</project>
